--- a/deepfake.ipynb
+++ b/deepfake.ipynb
@@ -1091,7 +1091,7 @@
       "gpuType": "A100",
       "include_colab_link": true
     },
-    "accelerator": "GPU",
+    "accelerator": "GPU"
   },
   "nbformat": 4,
   "nbformat_minor": 5
